Made changes after reviewer's commentaries on my code